[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubeluma"
version = "0.0.1"
description = "CLI + Web UI for real-time Kubernetes resource inspection"
authors = [{name="Internal"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "TBD"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "kubernetes>=28.0.0",
  "python-multipart>=0.0.9",
  "orjson>=3.9.10",
  "jinja2>=3.1.2",
  "watchfiles>=0.21.0"
]

[project.scripts]
kubeluma = "kubeluma.cli:main"
podglass = "kubeluma.cli:main"  # legacy alias

[tool.setuptools.packages.find]
where = ["."]

[tool.kubeluma]
default-port = 8765
